[package]
name = "rss_hacker" 
version = "0.1.0" 
edition = "2021" 

# Defines two binary targets for the package
[[bin]]
name = "simple_ssr_hydrate" 
required-features = ["hydration"]

[[bin]]
name = "simple_ssr_server" 
required-features = ["ssr"]

[dependencies]
yew = "0.20.0" 
reqwest = { version = "0.11.8", features = ["json"] } 
feed-rs = "1.3.0" 
futures = "0.3" 
bytes = "1.0" 
quickxml_to_serde = "0.5.0"
select = "0.6.0"
getrandom = {version= "0.2.8", features= ["js"]}

# Dependencies only used for the wasm32 target
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2" 
log = "0.4" 

# Dependencies only used for non-wasm32 targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.15.0", features = ["full"] }
warp = "0.3" 
clap = { version = "3.2.23", features = ["derive"] } 

# Optional features of the package
[features]
hydration = ["yew/hydration"] 
ssr = ["yew/ssr"]

# The version and feature of the RSS library
[dependencies.rss]
version = "2.0.2"
features = ["serde"]